# AokanaRenderer

./: .gitignore  AokanaRenderer.sln  CMakeLists.txt  README.md  xmake.lua
AokanaRenderer/: AokanaRenderer.vcxproj  AokanaRenderer.vcxproj.filters
AokanaRenderer/src/: main.cpp
AokanaRenderer/src/core/: bounds.cpp  bounds.h  buffer_cache.h  bvh.cpp  bvh.h  camera.cpp  camera.h  check.h  film.cpp  film.h  hash.h  integrator.cpp  integrator.h  interaction.h  material.cpp  material.h  matrix.cpp  matrix.h  moving_shpere.cpp  moving_sphere.h  perlin.h  primitive.cpp  primitive.h  ray.h  sampler.cpp  sampler.h  scene.cpp  scene.h  shape.cpp  shape.h  spectrum.h  spherical_geometry.h  texture.cpp  texture.h  thread_pool.h  transform.cpp  transform.h  triangle.cpp  triangle.h  utils.cpp  (+2 more)
AokanaRenderer/src/ui/: image.cpp  image.h  shader.h  ui.h  (+1 more)
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  aabb.cpp  aabb.h  bounds.cpp  bounds.h  bvh.cpp  bvh.h  camera.cpp  camera.h  film.cpp  film.h  integrator.cpp  integrator.h  interaction.h  interval.h  material.cpp  material.h  matrix.cpp  matrix.h  moving_shpere.cpp  moving_sphere.h  perlin.h  primitive.cpp  primitive.h  ray.h  sampler.cpp  sampler.h  scene.cpp  scene.h  scene_v2.h  shape.cpp  shape.h  spectrum.h  texture.cpp  texture.h  transform.h  utils.cpp  utils.h  vec.h  vec3.h
src/core/shapes/: sphere.cpp  sphere.h
src/core/ui/: CMakeLists.txt  image.cpp  image.h  shader.h  ui.cpp  ui.h
src/core/ui/shaders/ui_image_shader/: ui_image_shader.fragment
src/obj_loader/: CMakeLists.txt
src/stb/: CMakeLists.txt
(+1 files in other folders)
